# p084_monopoly_odds

./: README.md  pyproject.toml
src/p084_monopoly_odds/: monopoly.py
src/tests/: test_monopoly.py
