[tool.poetry]
name = "p084_monopoly_odds"
version = "0.1.0"
description = "Project euler problem 084"
authors = ["Benigno Calvo <benignoc@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[tool.poetry.scripts]
monopoly = "p084_monopoly_odds.monopoly:main"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

